<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Fragment1">

    <TextView
        android:layout_weight="1"
        android:id="@+id/signInHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/signInHeading"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:textSize="30sp" />

    <ScrollView
        android:layout_weight="1"
        android:id="@+id/scrollView"
        android:layout_width="410dp"
        android:layout_height="500sp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="64dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/buttonMicrosoft"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_btn"
                android:drawableLeft="@drawable/ic_microsoft"
                android:text="@string/microsoft"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/buttonGoogle"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_btn"
                android:drawableLeft="@drawable/ic_google"
                android:text="@string/google"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/buttonFacebook"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_btn"
                android:drawableLeft="@drawable/ic_facebook"
                android:text="@string/facebook"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/buttonLinkedin"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_btn"
                android:drawableLeft="@drawable/ic_linkedin"
                android:text="@string/linkedin"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/buttonInstagram"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_btn"
                android:drawableLeft="@drawable/ic_instagram"
                android:text="@string/instagram"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/buttonTwitter"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_btn"
                android:drawableLeft="@drawable/ic_twitter"
                android:text="@string/twitter"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/buttonSteam"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_btn"
                android:drawableLeft="@drawable/ic_steam"
                android:text="@string/steam"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/buttonGithub"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_btn"
                android:drawableLeft="@drawable/ic_github"
                android:text="@string/github"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/buttonApple"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_btn"
                android:drawableLeft="@drawable/ic_apple"
                android:text="@string/apple"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:layout_margin="10dp"/>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_weight="1"
        android:id="@+id/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/footer"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="606dp" />

</LinearLayout>